<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/layout_places_diary_rv_item_marginBottom"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="@dimen/cardview_item_cornerRadius"
        android:elevation="@dimen/cardview_item_elevation"
        android:layout_marginStart="@dimen/cardview_item_margin"
        android:layout_marginEnd="@dimen/cardview_item_margin"
        android:layout_marginTop="@dimen/cardview_item_margin"
        android:layout_marginBottom="@dimen/cardview_item_margin"
        app:contentPadding="@dimen/cardview_item_contentPadding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivImageItem"
                android:src="@drawable/image_test"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="@dimen/imageview_item_heightSize"
                android:contentDescription="@string/imageview_item_contentDescription" />

            <TextView
                android:id="@+id/tvTitleItem"
                android:layout_margin="@dimen/item_edittext_title_margin"
                android:maxLines="1"
                android:text="@string/et_hint_title"
                android:textSize="@dimen/item_edittext_title_textSize"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvDescriptionItem"
                android:layout_margin="@dimen/item_edittext_description_margin"
                android:maxLines="1"
                android:text="@string/et_description_hint"
                android:textSize="@dimen/item_edittext_description_textSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvDateItem"
                android:layout_gravity="end"
                android:layout_margin="@dimen/item_edittext_date_margin"
                android:maxLines="1"
                android:text="@string/et_date_hint"
                android:textSize="@dimen/item_edittext_date_textSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>