<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPlaceDiaryActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarAddPlace"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/CustomToolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:id="@+id/svMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/toolbarAddPlace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilTitlePlace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/purple_700"
                android:textColorHint="@color/colorPrimaryDark"
                android:layout_margin="@dimen/edittext_margin_size"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <EditText
                    android:id="@+id/etTitlePlace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primaryTextColor"
                    android:textColorHint="@color/secondaryTextColor"
                    android:textSize="@dimen/edittext_text_size"
                    android:hint="@string/et_hint_title"
                    android:inputType="textCapCharacters"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDescriptionPlace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/edittext_margin_size"
                app:boxStrokeColor="@color/purple_700"
                android:textColorHint="@color/colorPrimaryDark"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toBottomOf="@id/tilTitlePlace"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <EditText
                    android:id="@+id/etDescriptionPlace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/edittext_text_size"
                    android:hint="@string/et_description_hint"
                    android:inputType="textCapCharacters"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDatePlace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/edittext_margin_size"
                app:boxStrokeColor="@color/purple_700"
                android:textColorHint="@color/colorPrimaryDark"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toBottomOf="@id/tilDescriptionPlace"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <EditText
                    android:id="@+id/etDatePlace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textSize="@dimen/edittext_text_size"
                    android:hint="@string/et_date_hint"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilLocationPlace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/edittext_margin_size"
                app:boxStrokeColor="@color/purple_700"
                android:textColorHint="@color/colorPrimaryDark"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toBottomOf="@id/tilDatePlace"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <EditText
                    android:id="@+id/etLocationPlace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/edittext_text_size"
                    android:hint="@string/et_location_hint"
                    android:inputType="textPostalAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/ivAddImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_margin="10dp"
                android:scaleType="centerCrop"
                android:background="@drawable/item_add_imageview_border"
                android:src="@drawable/ic_add_image"
                app:layout_constraintTop_toBottomOf="@id/tilLocationPlace"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/tv_add_image_text" />

            <TextView
                android:id="@+id/tvAddImage"
                android:text="@string/tv_add_image_text"
                android:textSize="@dimen/edittext_text_size"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:padding="@dimen/textview_add_image_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/ivAddImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/ivAddImage"
                app:layout_constraintBottom_toBottomOf="@id/ivAddImage"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_save_text"
                android:layout_marginTop="@dimen/btn_save_marginTop"
                android:layout_marginStart="@dimen/btn_save_marginEndStart"
                android:layout_marginEnd="@dimen/btn_save_marginEndStart"
                android:textSize="@dimen/button_text_size"
                android:textColor="@color/white"
                android:background="@drawable/item_button_background"
                app:layout_constraintTop_toBottomOf="@id/ivAddImage"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>