<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PlacesDiaryDetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarPlaceDetails"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/CustomToolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:id="@+id/svDetailsMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/toolbarPlaceDetails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivDetailsImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintHeight_max="@dimen/details_view_image_max_height_size"
                android:scaleType="fitXY"
                android:src="@drawable/ic_add_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tvDetailsDescription"
                android:layout_margin="@dimen/details_edittext_description_margin"
                android:text="@string/et_description_hint"
                android:textSize="@dimen/details_edittext_description_textSize"
                android:textColor="@color/detailsViewDescriptionTextColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivDetailsImage"/>

            <TextView
                android:id="@+id/tvDetailsLocation"
                android:layout_marginTop="@dimen/details_edittext_location_marginTop"
                android:layout_marginStart="@dimen/details_edittext_location_marginStartEnd"
                android:layout_marginEnd="@dimen/details_edittext_location_marginTop"
                android:text="@string/et_location_hint"
                android:textSize="@dimen/details_edittext_location_textSize"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvDetailsDescription"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tvDetailsDate"
                android:layout_gravity="end"
                android:layout_margin="@dimen/details_edittext_date_margin"
                android:text="@string/et_date_hint"
                android:textSize="@dimen/details_edittext_date_textSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvDetailsLocation"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>